kubernetes/app/grocy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: grocy
spec:
  selector:
    app: grocy
  ports:
    - port: 80
      targetPort: 80
      name: http
